package boa.types.transportation;
import "state.proto";
option optimize_for = SPEED;

message Person{
	required STATE state= 1;
	required float ST_CASE = 2;
	required float VE_FORMS = 3;
	required float VEH_NO = 4;
	required float PER_NO = 5;
	required float STR_VEH = 6;
	required float COUNTY = 7;
	required float DAY = 8;
	required float MONTH = 9;
	required float HOUR = 10;
	required float MINUTE = 11;
	required float RUR_URB = 12;
	required float FUNC_SYS = 13;
	required float HARM_EV = 14;
	required float MAN_COLL = 15;
	required float SCH_BUS = 16;
	required float MAKE = 17;
	required float MAK_MOD = 18;
	required float BODY_TYP = 19;
	required float MOD_YEAR = 20;
	required float TOW_VEH = 21;
	required float SPEC_USE = 22;
	required float EMER_USE = 23;
	required float ROLLOVER = 24;
	required float IMPACT1 = 25;
	required float FIRE_EXP = 26;
	required float AGE = 27;
	required float SEX = 28;
	required float PER_TYP = 29;
	required float INJ_SEV = 30;
	required float SEAT_POS = 31;
	required float REST_USE = 32;
	required float REST_MIS = 33;
	required float AIR_BAG = 34;
	required float EJECTION = 35;
	required float EJ_PATH = 36;
	required float EXTRICAT = 37;
	required float DRINKING = 38;
	required float ALC_DET = 39;
	required float ALC_STATUS = 40;
	required float ATST_TYP = 41;
	required float ALC_RES = 42;
	required float DRUGS = 43;
	required float DRUG_DET = 44;
	required float DSTATUS = 45;
	optional float DRUGTST1 = 46;
	optional float DRUGTST2 = 47;
	optional float DRUGTST3 = 48;
	optional float DRUGRES1 = 49;
	optional float DRUGRES2 = 50;
	optional float DRUGRES3 = 51;
	required float HOSPITAL = 52;
	required float DOA = 53;
	required float DEATH_DA = 54;
	required float DEATH_MO = 55;
	required float DEATH_YR = 56;
	required float DEATH_HR = 57;
	required float DEATH_MN = 58;
	required float DEATH_TM = 59;
	required float LAG_HRS = 60;
	required float LAG_MINS = 61;
	required float P_SF1 = 62;
	optional float P_SF2 = 63;
	optional float P_SF3 = 64;
	required float WORK_INJ = 65;
	required float HISPANIC = 66;
	required float RACE = 67;
	required float LOCATION = 68;
}
