package boa.types.transportation;
import "state.proto";

  message Vehicle
  {
	  required STATE state= 1;
	  required int32 ST_CASE = 2;
	  required int32 VEH_NO = 3;
	  required int32 VE_FORMS = 4;
	  required int32 NUMOCCS = 5;
	  required int32 DAY = 6;
	  required int32 MONTH = 7;
	  required int32 HOUR = 8;
	  required int32 MINUTE = 9;
	  required int32 HARM_EV = 10;
	  required int32 MAN_COLL = 11;
	  required int32 UNITTYPE = 12;
	  required int32 HIT_RUN = 13;
	  required int32 REG_STAT = 14;
	  required int32 OWNER = 15;
	  required int32 MAKE = 16;
	  required int32 MODEL = 17;
	  required int32 MAK_MOD = 18;
	  required int32 BODY_TYP = 19;
	  required int32 MOD_YEAR = 20;
	  required string VIN = 21;
	  required string VIN_1 = 22;
	  required string VIN_2 = 23;
	  required string VIN_3 = 24;
	  required string VIN_4 = 25;
	  required string VIN_5 = 26;
	  required string VIN_6 = 27;
	  required string VIN_7 = 28;
	  required string VIN_8 = 29;
	  required string VIN_9 = 30;
	  required string VIN_10 = 31;
	  required string VIN_11 = 32;
	  required string VIN_12 = 33;
	  required int32 TOW_VEH = 34;
	  required int32 J_KNIFE = 35;
	  required string MCARR_I1 = 36;
	  required string MCARR_I2 = 37;
	  required string MCARR_ID = 38;
	  required int32 GVWR = 39;
	  required int32 V_CONFIG = 40;
	  required int32 CARGO_BT = 41;
	  required int32 HAZ_INV = 42;
	  required int32 HAZ_PLAC = 43;
	  required int32 HAZ_ID = 44;
	  required int32 HAZ_CNO = 45;
	  required int32 HAZ_REL = 46;
	  required int32 BUS_USE = 47;
	  required int32 SPEC_USE = 48;
	  required int32 EMER_USE = 49;
	  required int32 TRAV_SP = 50;
	  required int32 UNDERIDE = 51;
	  required int32 ROLLOVER = 52;
	  required int32 ROLINLOC = 53;
	  required int32 IMPACT1 = 54;
	  required int32 DEFORMED = 55;
	  required int32 TOWED = 56;
	  required int32 M_HARM = 57;
	  required int32 VEH_SC1 = 58;
	  required int32 VEH_SC2 = 59;
	  required int32 FIRE_EXP = 60;
	  required int32 DR_PRES = 61;
	  required int32 L_STATE = 62;
	  required int32 DR_ZIP = 63;
	  required int32 L_STATUS = 64;
	  required int32 L_TYPE = 65;
	  required int32 CDL_STAT = 66;
	  required int32 L_ENDORS = 67;
	  required int32 L_COMPL = 68;
	  required int32 L_RESTRI = 69;
	  required int32 DR_HGT = 70;
	  required int32 DR_WGT = 71;
	  required int32 PREV_ACC = 72;
	  required int32 PREV_SUS = 73;
	  required int32 PREV_DWI = 74;
	  required int32 PREV_SPD = 75;
	  required int32 PREV_OTH = 76;
	  required int32 FIRST_MO = 77;
	  required int32 FIRST_YR = 78;
	  required int32 LAST_MO = 79;
	  required int32 LAST_YR = 80;
	  required int32 SPEEDREL = 81;
	  required int32 DR_SF1 = 82;
	  optional int32 DR_SF2 = 83;
	  optional int32 DR_SF3 = 84;
	  optional int32 DR_SF4 = 85;
	  required int32 VTRAFWAY = 86;
	  required int32 VNUM_LAN = 87;
	  required int32 VSPD_LIM = 88;
	  required int32 VALIGN = 89;
	  required int32 VPROFILE = 90;
	  required int32 VPAVETYP = 91;
	  required int32 VSURCOND = 92;
	  required int32 VTRAFCON = 93;
	  required int32 VTCONT_F = 94;
	  required int32 P_CRASH1 = 95;
	  required int32 P_CRASH2 = 96;
	  required int32 P_CRASH3 = 97;
	  required int32 PCRASH4 = 98;
	  required int32 PCRASH5 = 99;
	  required int32 ACC_TYPE = 100;
	  required int32 DEATHS = 101;
	  required int32 DR_DRINK = 102;
  }
